--- a/LinCon.Avalonia/Views/EditLinkView.xaml
+++ b/LinCon.Avalonia/Views/EditLinkView.xaml
@@ -1,14 +1,44 @@
 <UserControl xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="LinCon.Avalonia.Views.EditLinkView">
-    <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Orientation="Vertical" Spacing="4">
-       <TextBlock>New Link</TextBlock>
-       <TextBox Text="{Binding Url, Mode=TwoWay}"/>
-       <TextBlock>New Name</TextBlock>
-       <TextBox Text="{Binding Name, Mode=TwoWay}"/>
-       <StackPanel Orientation="Horizontal">
-            <Button Command="{Binding EditCommand}">Edit</Button>
-            <Button Command="{Binding ReturnCommand}">Cancel</Button>
-       </StackPanel>
-    </StackPanel>
+    <UserControl.Styles>
+        <Style Selector="Button">
+            <Setter Property="Cursor" Value="Hand"/>
+        </Style>
+        <Style Selector="Button.greenBtn">
+            <Setter Property="Background" Value="#00796B"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="Padding" Value="20 10 20 10"/>
+        </Style>
+        <Style Selector="Button.greenBtn /template/ ContentPresenter">
+            <Setter Property="CornerRadius" Value="0 30 0 30"/>
+            <Setter Property="BorderThickness" Value="0"/>
+        </Style>
+        <Style Selector="Button.closeBtn">
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="BorderThickness" Value="0"/>
+        </Style>
+    </UserControl.Styles>
+    <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+        <Grid Background="Black" Opacity="0.5"/>
+        <Border Padding="30 0 30 30" CornerRadius="5" HorizontalAlignment="Center" VerticalAlignment="Center" Background="White">
+            <StackPanel Spacing="30" Orientation="Vertical">
+                <Border Margin="-30 0 -30 0" Background="#EEEEEE" CornerRadius="5 5 0 0">
+                    <Grid Height="40" ColumnDefinitions="* 50">
+                        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Grid.ColumnSpan="2" Grid.Column="0">Edit Link</TextBlock>
+                        <Button Classes="closeBtn" Grid.Column="1" Command="{Binding ReturnCommand}">X</Button>
+                    </Grid>
+                </Border>
+                <StackPanel MinWidth="300" Spacing="5" Orientation="Vertical">
+                    <TextBlock>New Link</TextBlock>
+                    <TextBox Text="{Binding Url, Mode=TwoWay}"/>
+                    <TextBlock>New Name</TextBlock>
+                    <TextBox Text="{Binding Name, Mode=TwoWay}"/>
+                    <Border Padding="0 20 0 0">
+                        <Button Classes="greenBtn" Command="{Binding EditCommand}">Change</Button>
+                    </Border>
+                </StackPanel>
+            </StackPanel>
+        </Border>
+    </Grid>
 </UserControl>
