--- a/LinCon.Avalonia/Views/MainWindow.xaml
+++ b/LinCon.Avalonia/Views/MainWindow.xaml
@@ -9,6 +9,42 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="LinCon.Avalonia.Views.MainWindow"
         Title="LinCon">
+     <Window.Styles>
+        <Style Selector="Button">
+            <Setter Property="Cursor" Value="Hand"/>
+        </Style>
+        <Style Selector="Button.greenBtn">
+            <Setter Property="Background" Value="#00796B"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="Padding" Value="20 10 20 10"/>
+        </Style>
+        <Style Selector="Button.greenBtn /template/ ContentPresenter">
+            <Setter Property="CornerRadius" Value="0 30 0 30"/>
+            <Setter Property="BorderThickness" Value="0"/>
+        </Style>
+        <Style Selector="Button.redBtn">
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="Foreground" Value="Red"/>
+            <Setter Property="Padding" Value="20 10 20 10"/>
+        </Style>
+        <Style Selector="Button.redBtn /template/ ContentPresenter">
+            <Setter Property="CornerRadius" Value="0"/>
+            <Setter Property="BorderThickness" Value="0"/>
+        </Style>
+        <Style Selector="Button.closeBtn">
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="BorderThickness" Value="0"/>
+        </Style>
+        <Style Selector="Button.defaultBtn">
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="Foreground" Value="Black"/>
+            <Setter Property="Padding" Value="20 10 20 10"/>
+        </Style>
+        <Style Selector="Button.defaultBtn /template/ ContentPresenter">
+            <Setter Property="CornerRadius" Value="0"/>
+            <Setter Property="BorderThickness" Value="0"/>
+        </Style>
+     </Window.Styles>
      <Grid RowDefinitions="5,*,5" ColumnDefinitions="2,*,2">
         <DockPanel Grid.Column="1" Grid.Row="1" >
             <Grid Margin="-5 -5 -5 0" Height="40" Name="TitleBar" Background="White" DockPanel.Dock="Top" ColumnDefinitions="Auto,*,Auto">
