--- a/LinCon.Avalonia/Views/MainWindow.xaml
+++ b/LinCon.Avalonia/Views/MainWindow.xaml
@@ -10,67 +10,7 @@
         x:Class="LinCon.Avalonia.Views.MainWindow"
         Title="LinCon">
      <Window.Styles>
-        <Style Selector="Button">
-            <Setter Property="Cursor" Value="Hand"/>
-        </Style>
-        <Style Selector="Button.greenBtn">
-            <Setter Property="Background" Value="#00796B"/>
-            <Setter Property="Foreground" Value="White"/>
-            <Setter Property="Padding" Value="20 10 20 10"/>
-        </Style>
-        <Style Selector="Button.greenBtn /template/ ContentPresenter">
-            <Setter Property="CornerRadius" Value="0 30 0 30"/>
-            <Setter Property="BorderThickness" Value="0"/>
-        </Style>
-        <Style Selector="Button.redBtn">
-            <Setter Property="Background" Value="Transparent"/>
-            <Setter Property="Foreground" Value="Red"/>
-            <Setter Property="Padding" Value="20 10 20 10"/>
-        </Style>
-        <Style Selector="Button.redBtn /template/ ContentPresenter">
-            <Setter Property="CornerRadius" Value="0"/>
-            <Setter Property="BorderThickness" Value="0"/>
-        </Style>
-        <Style Selector="Button.closeBtn">
-            <Setter Property="Background" Value="Transparent"/>
-            <Setter Property="BorderThickness" Value="0"/>
-        </Style>
-        <Style Selector="Button.defaultBtn">
-            <Setter Property="Background" Value="Transparent"/>
-            <Setter Property="Foreground" Value="Black"/>
-            <Setter Property="Padding" Value="20 10 20 10"/>
-        </Style>
-        <Style Selector="Button.defaultBtn /template/ ContentPresenter">
-            <Setter Property="CornerRadius" Value="0"/>
-            <Setter Property="BorderThickness" Value="0"/>
-        </Style>
-
-        <Style Selector="Button.exportBtn">
-            <Setter Property="Background" Value="#0097A7"/>
-            <Setter Property="Foreground" Value="White"/>
-            <Setter Property="Cursor" Value="Hand"/>
-        </Style>
-        <Style Selector=".exportBtn /template/ ContentPresenter">
-            <Setter Property="CornerRadius" Value="15"/>
-        </Style>
-    
-        <Style Selector="Button.browseBtn">
-            <Setter Property="Background" Value="#0097A7"/>
-            <Setter Property="BorderThickness" Value="0"/>
-            <Setter Property="Foreground" Value="White"/>
-            <Setter Property="Cursor" Value="Hand"/>
-        </Style>
-        <Style Selector=".browseBtn /template/ ContentPresenter">
-            <Setter Property="CornerRadius" Value="5 0 0 5"/>
-        </Style>
-        <Style Selector="Button.fromComputerBtn">
-            <Setter Property="Background" Value="#0097A7"/>
-            <Setter Property="Foreground" Value="White"/>
-            <Setter Property="Cursor" Value="Hand"/>
-        </Style>
-        <Style Selector=".fromComputerBtn /template/ ContentPresenter">
-            <Setter Property="CornerRadius" Value="15"/>
-        </Style>
+        <StyleInclude Source="avares://LinCon.Avalonia/Resources/Buttons.xaml"/>
      </Window.Styles>
      <Grid RowDefinitions="5,*,5" ColumnDefinitions="2,*,2">
         <DockPanel Grid.Column="1" Grid.Row="1" >
@@ -80,7 +20,6 @@
                     <StackPanel.Styles>
                         <Style Selector="Button">
                             <Setter Property="Background" Value="Transparent"></Setter>
-                            <Setter Property="Cursor" Value="Hand"></Setter>
                             <Setter Property="Width" Value="50"></Setter>
                             <Setter Property="BorderThickness" Value="0"></Setter>
                         </Style>
