--- a/LinCon.Avalonia/Resources/Buttons.xaml
+++ b/LinCon.Avalonia/Resources/Buttons.xaml
@@ -1,5 +1,6 @@
 <Styles
-    xmlns="https://github.com/avaloniaui">
+    xmlns="https://github.com/avaloniaui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
       <Style Selector="Button">
           <Setter Property="Cursor" Value="Hand"/>
       </Style>
@@ -42,7 +43,7 @@
       <Style Selector=".exportBtn /template/ ContentPresenter">
           <Setter Property="CornerRadius" Value="15"/>
       </Style>
-  
+
       <Style Selector="Button.browseBtn">
           <Setter Property="Background" Value="#0097A7"/>
           <Setter Property="BorderThickness" Value="0"/>
@@ -57,5 +58,19 @@
       </Style>
       <Style Selector=".fromComputerBtn /template/ ContentPresenter">
           <Setter Property="CornerRadius" Value="15"/>
+      </Style>
+
+      <Style Selector="Button.backBtn">
+        <Setter Property="Template">
+          <Setter.Value>
+            <ControlTemplate TargetType="{x:Type Button}">
+              <Path RenderTransformOrigin="0.5 0.5" Fill="Black" Data="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z">
+                  <Path.RenderTransform>
+                      <ScaleTransform ScaleX="0.09" ScaleY="0.09"/>
+                  </Path.RenderTransform>
+              </Path>
+            </ControlTemplate>
+          </Setter.Value>
+        </Setter>
       </Style>
 </Styles>
