--- a/LinCon.Avalonia/Views/CaseExplorerView.xaml
+++ b/LinCon.Avalonia/Views/CaseExplorerView.xaml
@@ -7,17 +7,7 @@
                 <Grid RowDefinitions="130 *">
                     <StackPanel Spacing="15" Orientation="Vertical">
                         <StackPanel Orientation="Horizontal" Spacing="15">
-                            <Button Width="50" Height="50" Command="{Binding ReturnCommand}">
-                                <Button.Template>
-                                    <ControlTemplate TargetType="{x:Type Button}">
-                                        <Path RenderTransformOrigin="0.5 0.5" Fill="Black" Data="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z">
-                                            <Path.RenderTransform>
-                                                <ScaleTransform ScaleX="0.09" ScaleY="0.09"/>
-                                            </Path.RenderTransform>
-                                        </Path>
-                                    </ControlTemplate>
-                                </Button.Template>
-                            </Button>
+                            <Button Classes="backBtn" Width="50" Height="50" Command="{Binding ReturnCommand}"/>
                             <TextBlock FontSize="30" Foreground="#0D47A1">Your cases</TextBlock>
                         </StackPanel>
                         <StackPanel Margin="15 0 0 0" Orientation="Horizontal" Spacing="15">
