--- a/LinCon.Avalonia/Resources/Buttons.xaml
+++ b/LinCon.Avalonia/Resources/Buttons.xaml
@@ -73,4 +73,23 @@
           </Setter.Value>
         </Setter>
       </Style>
+
+      <Style Selector="Button.menuItem">
+        <Setter Property="Margin" Value="9,3,9,3"/>
+        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="Height" Value="50"/>
+        <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="FontSize" Value="24"></Setter>
+        <Setter Property="Padding" Value="6"/>
+        <Setter Property="Background" Value="#0097A7"/>
+        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="Cursor" Value="Hand"></Setter>
+      </Style>
+
+      <Style Selector="Button.menuItem /template/ ContentPresenter">
+        <Setter Property="CornerRadius" Value="0 30 0 30"/>
+      </Style>
+      <Style Selector="Button.menuItem:pointerover /template/ ContentPresenter">
+        <Setter Property="Background" Value="Red"/>
+      </Style>
 </Styles>
