--- a/LinCon.Avalonia/Views/MainWindow.xaml
+++ b/LinCon.Avalonia/Views/MainWindow.xaml
@@ -17,19 +17,9 @@
             <Grid Margin="-5 -5 -5 0" Height="40" Name="TitleBar" Background="White" DockPanel.Dock="Top" ColumnDefinitions="Auto,*,Auto">
                 <TextBlock Margin="120 0 0 0" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center">LinCon - Your Research Container</TextBlock>
                 <StackPanel Grid.Column="2" Orientation="Horizontal">
-                    <StackPanel.Styles>
-                        <Style Selector="Button">
-                            <Setter Property="Background" Value="Transparent"></Setter>
-                            <Setter Property="Width" Value="50"></Setter>
-                            <Setter Property="BorderThickness" Value="0"></Setter>
-                        </Style>
-                        <Style Selector="Button:pointerover">
-                            <Setter Property="Background" Value="#EEEEEE"></Setter>
-                        </Style>
-                    </StackPanel.Styles>
-                    <Button Name="MinimizeButton">_</Button>
-                    <Button Name="MaximizeButton">[ ]</Button>
-                    <Button Name="CloseButton">X</Button>
+                    <Button Classes="captionBtn" Name="MinimizeButton">_</Button>
+                    <Button Classes="captionBtn" Name="MaximizeButton">[ ]</Button>
+                    <Button Classes="captionBtn" Name="CloseButton">X</Button>
                 </StackPanel>
             </Grid>
             <rxui:RoutedViewHost Router="{Binding Router}"/>
