--- a/LinCon.Avalonia/Resources/Buttons.xaml
+++ b/LinCon.Avalonia/Resources/Buttons.xaml
@@ -64,11 +64,9 @@
         <Setter Property="Template">
           <Setter.Value>
             <ControlTemplate TargetType="{x:Type Button}">
-              <Path RenderTransformOrigin="0.5 0.5" Fill="Black" Data="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z">
-                  <Path.RenderTransform>
-                      <ScaleTransform ScaleX="0.09" ScaleY="0.09"/>
-                  </Path.RenderTransform>
-              </Path>
+                <DrawingPresenter Width="50" Height="50" HorizontalAlignment="Center">
+                    <GeometryDrawing Brush="Black" Geometry="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"/>
+                </DrawingPresenter>
             </ControlTemplate>
           </Setter.Value>
         </Setter>
@@ -83,7 +81,6 @@
         <Setter Property="Padding" Value="6"/>
         <Setter Property="Background" Value="#0097A7"/>
         <Setter Property="Foreground" Value="White"/>
-        <Setter Property="Cursor" Value="Hand"></Setter>
       </Style>
 
       <Style Selector="Button.menuItem /template/ ContentPresenter">
