--- a/LinCon.Avalonia/Views/CaseExportView.xaml
+++ b/LinCon.Avalonia/Views/CaseExportView.xaml
@@ -1,24 +1,24 @@
 <UserControl xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="LinCon.Avalonia.Views.CaseExportView">
-    <Border Width="1088" Height="600" Background="White" CornerRadius="15">
-        <Grid RowDefinitions="70 * 70">     
-            <StackPanel Margin="50 20 0 0" VerticalAlignment="Center" Spacing="20" Orientation="Horizontal">
+    <Grid RowDefinitions="80 *" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+        <StackPanel Margin="50 20 0 0" VerticalAlignment="Center" Spacing="20" Orientation="Horizontal">
                 <Button Classes="backBtn" Command="{Binding ReturnCommand}" Width="50"/>
                 <TextBlock FontSize="30" Foreground="#0D47A1">Export Case</TextBlock>
-            </StackPanel>
-            <StackPanel Grid.Row="1" Spacing="40" Margin="0 30 0 0">
-                <TextBlock FontSize="30" HorizontalAlignment="Center">Check the cases which you want to export</TextBlock>
-                <StackPanel Margin="50 0 50 0" Spacing="20">
-                    <ScrollViewer Height="100">
-                        <ItemsControl  Items="{Binding Cases}">
-                            <ItemsControl.ItemTemplate>
-                                <DataTemplate>
-                                    <CheckBox FontSize="15" Margin="0 15 0 0" IsChecked="{Binding IsChecked, Mode=TwoWay}" Content="{Binding Name}"></CheckBox>
-                                </DataTemplate>
-                            </ItemsControl.ItemTemplate>
-                        </ItemsControl>
-                    </ScrollViewer>
+        </StackPanel>
+        <Border Grid.Row="1" Margin="0 30 0 30" Padding="30" CornerRadius="15" HorizontalAlignment="Center" VerticalAlignment="Center" Background="White">
+            <Grid RowDefinitions="50 * 120">
+                <TextBlock HorizontalAlignment="Center">Select the Cases which you want to delete</TextBlock>
+                <ScrollViewer MinWidth="400" Padding="20" Grid.Row="1" HorizontalAlignment="Stretch">
+                    <ItemsControl BorderThickness="0" Items="{Binding Cases}">
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate>
+                                <CheckBox FontSize="15" Margin="0 15 0 0" IsChecked="{Binding IsChecked, Mode=TwoWay}" Content="{Binding Name}"></CheckBox>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                    </ItemsControl>
+                </ScrollViewer>
+                <StackPanel VerticalAlignment="Bottom" Spacing="20" Grid.Row="2" Orientation="Vertical">
                     <TextBlock FontSize="12">Export here</TextBlock>
                     <Grid Height="40" ColumnDefinitions="Auto *">
                         <Button Width="40" Classes="browseBtn" Command="{Binding OpenSaveFileDialogCommand}">
@@ -28,9 +28,9 @@
                             <TextBox FontSize="15" VerticalAlignment="Center" BorderThickness="0" Background="Transparent" Text="{Binding ExportPath}"/>
                         </Border>
                     </Grid>
+                    <Button Margin="-30 10 -30 0" BorderThickness="0" FontSize="30" Grid.Row="2" Classes="exportBtn" Command="{Binding ExportCasesCommand}">Export</Button>
                 </StackPanel>
-            </StackPanel>
-            <Button BorderThickness="0" FontSize="30" Grid.Row="2" Classes="exportBtn" Command="{Binding ExportCasesCommand}">Export</Button>
-        </Grid>
-    </Border>
+            </Grid>
+        </Border>
+    </Grid>
 </UserControl>
