--- a/LinCon.Avalonia/Views/DeleteManyCasesView.xaml
+++ b/LinCon.Avalonia/Views/DeleteManyCasesView.xaml
@@ -4,16 +4,16 @@
     <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
         <Grid Background="Black" Opacity="0.5"/>
         <Border Padding="30 0 30 30" CornerRadius="5" HorizontalAlignment="Center" VerticalAlignment="Center" Background="White">
-            <StackPanel Spacing="30" Orientation="Vertical">
+            <Grid RowDefinitions="40 *" >
                 <Border Margin="-30 0 -30 0" Background="#EEEEEE" CornerRadius="5 5 0 0">
                     <Grid Height="40" ColumnDefinitions="* 50">
                         <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Grid.ColumnSpan="2" Grid.Column="0">Delete many Cases</TextBlock>
                         <Button Classes="closeBtn" Grid.Column="1" Command="{Binding ReturnCommand}">X</Button>
                     </Grid>
                 </Border>
-                <StackPanel Spacing="30" Orientation="Vertical">
-                    <TextBlock>Select the Cases which you want to delete</TextBlock>
-                    <ScrollViewer HorizontalAlignment="Stretch" Height="200">
+                <Grid Grid.Row="1" RowDefinitions="50 * 80">
+                    <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center">Select the Cases which you want to delete</TextBlock>
+                    <ScrollViewer MaxHeight="200" MinWidth="400" Grid.Row="1" HorizontalAlignment="Stretch">
                         <ItemsControl BorderThickness="0" Items="{Binding CaseItems}">
                             <ItemsControl.ItemTemplate>
                                 <DataTemplate>
@@ -22,12 +22,12 @@
                             </ItemsControl.ItemTemplate>
                         </ItemsControl>
                     </ScrollViewer>
-                    <StackPanel HorizontalAlignment="Center" Spacing="20" Orientation="Horizontal">
+                    <StackPanel Grid.Row="2" HorizontalAlignment="Center" Spacing="20" Orientation="Horizontal">
                         <Button Classes="redBtn" Command="{Binding DeleteManyCommand}">Delete</Button>
                         <Button Classes="greenBtn" Command="{Binding ReturnCommand}">Cancel</Button>
                     </StackPanel>
-                </StackPanel>
-            </StackPanel>
+                </Grid>
+            </Grid>
         </Border>
     </Grid>
 </UserControl>
