--- a/LinCon.Avalonia/Views/CaseImportView.xaml
+++ b/LinCon.Avalonia/Views/CaseImportView.xaml
@@ -4,7 +4,7 @@
     <Grid RowDefinitions="80 *" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
         <StackPanel Margin="50 20 0 0" VerticalAlignment="Center" Spacing="20" Orientation="Horizontal">
                 <Button Classes="backBtn" Command="{Binding ReturnCommand}" Width="50"/>
-                <TextBlock FontSize="30" Foreground="#0D47A1">Export Case</TextBlock>
+                <TextBlock FontSize="30" Foreground="#0D47A1">Import Case</TextBlock>
         </StackPanel>
         <Border DragDrop.AllowDrop="True" Name="DropState" Grid.Row="1" Margin="0 30 0 0" Padding="30 30 30 0" CornerRadius="15" HorizontalAlignment="Center" VerticalAlignment="Center" Background="White">
             <Grid MinWidth="400" RowDefinitions="* 120">
